force-app/main/default/objects/Commodity__c/fields/DescriptionofGoods__c.field-meta.xml
<CustomField>
    <fullName>DescriptionofGoods__c</fullName>
    <label>Description of Goods</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>