force-app/main/default/objects/Commodity__c/fields/Prioritized__c.field-meta.xml
<CustomField>
    <fullName>Prioritized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prioritize to this commodity for the Cambodia route</description>
    <label>Prioritized</label>
    <type>Checkbox</type>
</CustomField>