force-app/main/default/objects/Commodity__c/fields/Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Prohibited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prohibited</label>
    <type>Checkbox</type>
</CustomField>